# CanvasEditor

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO
.github/workflows/: ccpp.yml
app/: CMakeLists.txt
app/src/: application.cpp  application.h  main.cpp
app/src/core/: graphicscontext.h  input.cpp  input.h  keycodes.h  layer.h  layerstack.cpp  layerstack.h  logger.h  timer.cpp  timer.h  window.h
app/src/core/events/: event.h  keyevent.h  mouseevent.h  windowevent.h
app/src/graphics/: buffer.h  bufferlayout.cpp  bufferlayout.h  framebuffer.h  renderstate.h  shader.h  texture.h  vertexarray.h
app/src/imgui/: imgui.cpp  imgui.h  imguimanager.cpp  imguimanager.h  imguiwindow.cpp  imguiwindow.h
app/src/math/: math.h  matrixstack.h  mvpstack.h
app/src/renderer/: batcher.cpp  batcher.h  font.cpp  font.h  immgfx.cpp  immgfx.h  immgfxshaders.inl  renderer.cpp  renderer.h  shaders.inl
app/src/utils/: assert.h  fileutils.h  handledobject.h  log.h  singleton.h  stringutils.h  stronghandle.h
app/src/vm/: lua.hpp  vm.cpp  vm.h  vmlogger.h
app/src/vm/luabind/: bindcorelib.cpp  bindcorelib.h  bindgraphicslib.cpp  bindgraphicslib.h  bindimguilib.cpp  bindimguilib.h  bindmath.cpp  bindmath.h  bindrendererlib.cpp  bindrendererlib.h  bindsystemlib.cpp  bindsystemlib.h  luabind.h  luatypes.cpp  luatypes.h
paint/: CMakeLists.txt
paint/src/: main.cpp  paintrenderer.cpp  paintrenderer.h
paint/src/network/: networkvm.cpp  networkvm.h
res/apps/paint/: paint_main.lua  rpc_module.lua  shapes.lua
res/scripts/: config.lua  main.lua
